resolved clipping li

--- a/css/my-story.css
+++ b/css/my-story.css
@@ -1337,12 +1337,18 @@
         -webkit-columns: 3;
            -moz-columns: 3;
                 columns: 3;
-        width: 500px;
+        width: 550px;
+        margin-left: -20px;
     }
 
     #story-landing .grey-box ul li {
         margin-right: 100px;
         width: 100%;
+    }
+
+    #story-landing .grey-box ul li:nth-child(3),
+    #story-landing .grey-box ul li:nth-child(4) {
+        margin-left: -15px;
     }
 
     .content-group {
@@ -1393,7 +1399,7 @@
     #grey-arrow {
         display: block;
         position: absolute;
-        width: 90px;
+        width: 75px;
         right: 107px;
         top: 50%;
         transform: translateY(-50%);
